# fluidocs

./: README.md  nx.json  package-lock.json  package.json
Fluidocs/: package-lock.json  package.json
Fluidocs/src/: middleware.ts
Fluidocs/src/actions/: authActions.js
Fluidocs/src/app/: layout.tsx  page.tsx
Fluidocs/src/app/(auth)/login/: page.tsx
Fluidocs/src/app/(auth)/signup/: page.tsx
Fluidocs/src/app/(root)/: layout.tsx  page.tsx
Fluidocs/src/app/(root)/dashboard/: page.tsx
Fluidocs/src/app/api/auth/[...nextauth]/: route.ts
Fluidocs/src/components/forms/: Login.tsx  Signup.tsx
Fluidocs/src/components/pages/dashboard/: HeroSection.tsx
Fluidocs/src/components/pages/home/: HeroSection.tsx  HeroSectionDark.tsx
Fluidocs/src/components/providers/: Provider.tsx
apps/fluidocs/: index.html  jest.config.ts  project.json  vite.config.ts
apps/fluidocs-api/: pyproject.toml
apps/fluidocs-api/app/: main.py
apps/fluidocs/src/app/: app.spec.tsx  app.tsx  nx-welcome.tsx
